--- a/src/views/user/layouts/header.ejs
+++ b/src/views/user/layouts/header.ejs
@@ -22,21 +22,25 @@
 						<li>
 							<a href="/"><%- __('header.dashboard') %></a>
 						</li>
-						<li class="dropdown first">
+						<li class="dropdown first header-dropdown">
 							<a class="btn btn-default dropdown-toggle lv1" data-toggle="dropdown" data-hover="dropdown">
 							<%- __('header.category') %><i class="fa fa-angle-down" aria-hidden="true"></i>
 							</a>
 							<ul class="dropdown-menu level1">
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown" ><%- __('header.category') %> 1<i class="ion-ios-arrow-forward"></i></a>
-									<ul class="dropdown-menu level2">
-										<li><a href="/book?category=5"><%- __('header.category') %> 1-1</a></li>
-										<li><a href="/book"><%- __('header.category') %> 1-2</a></li>
-									</ul>
-								</li>			
-								<li><a href="movielist.html"><%- __('header.category') %> 2</a></li>
-								<li><a href="moviesingle.html"><%- __('header.category') %> 3</a></li>
-								<li class="it-last"><a href="seriessingle.html"><%- __('header.category') %> 4</a></li>
+								<% typeof categories != 'undefined' && categories.forEach(category => { %>
+									<% if (category.children.length) { %>
+										<li class="dropdown">
+											<a href="#" class="dropdown-toggle" data-toggle="dropdown" ><%- category.name %><i class="ion-ios-arrow-forward"></i></a>
+											<ul class="dropdown-menu level2">
+												<% category.children.forEach(child => { %>
+												<li><a href="/book?category=<%- child._id %>"><%- child.name %></a></li>
+												<% }) %>
+											</ul>
+										</li>			
+									<% } else { %>
+										<li><a href="/book?category=<%- category._id %>"><%- category.name %></a></li>		 
+									<% } %>
+								<% }) %>
 							</ul>
 						</li>
 						<li>
@@ -62,9 +66,12 @@
 	    </nav>
 	    
 	    <!-- top search form -->
-		<form action="" method="post" class="top-search">
+		<form action="" method="get" class="top-search">
 	    	<select>
-				<option value="united">Thể loại</option>
+				<option value="">Thể loại</option>
+				<% typeof categories != 'undefined' && categories.forEach(category => { %>
+					<option value="<%- category.short_name %> "><%- category.name %> </option>
+				<% }) %> 
 			</select>
 			<input type="text" placeholder="Tìm kiếm sách mà bạn cần">
 	    </form>
