--- a/src/views/admin/layouts/sidebar.ejs
+++ b/src/views/admin/layouts/sidebar.ejs
@@ -7,11 +7,12 @@
     
     <ul class="sidebar-panel nav">
       <li><a href="/admin/user"><span class="icon color15"><i class="fa fa-columns"></i></span>Quản lý user</a></li>
+      <li><a href="/admin/book"><span class="icon color15"><i class="fa fa-columns"></i></span>Quản lý sách</a></li>
       <li><a href="/admin/review"><span class="icon color15"><i class="fa fa-columns"></i></span>Quản lý bài review</a></li>
       <li><a href="/admin/blog"><span class="icon color15"><i class="fa fa-columns"></i></span>Quản lý bài blog</a></li>
       <li><a href="#"><span class="icon color15"><i class="fa fa-columns"></i></span>Quản lý thể loại <span class="caret"></span></a>
         <ul>
-          <li><a href="/admin/category">Quản lý thể loại sách</a></li>
+          <li><a href="/admin/book-category">Quản lý thể loại sách</a></li>
           <li><a href="/admin/banner-category">Quản lý thể loại banner</a></li>
         </ul></li>
       <li><a href="/admin/banner"><span class="icon color15"><i class="fa fa-columns"></i></span>Quản lý banner</a></li>
