--- a/src/views/admin/banner-category.ejs
+++ b/src/views/admin/banner-category.ejs
@@ -39,8 +39,7 @@
     
     <!-- Start Page Header Right Div -->
     <div class="right">
-      <!-- <button class="btn btn-info admin-feature__btn" type="button" data-bs-toggle="modal" data-bs-target="#modalCreateAccount">Thêm tài khoản</button> -->
-      <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Thêm thể loại</button>
+      <a href="/admin/create-banner-category" type="button" class="btn btn-success btn-lg" >Thêm</a>
     </div>
     <!-- End Page Header Right Div -->
     <div class="btn-group" role="group" aria-label="...">
