--- a/src/views/admin/banner.ejs
+++ b/src/views/admin/banner.ejs
@@ -38,7 +38,7 @@
     
     <!-- Start Page Header Right Div -->
     <div class="right">
-      <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Thêm banner</button>
+      <a href="/admin/create-banner" type="button" class="btn btn-success btn-lg" >Thêm</a>
     </div>
     <!-- End Page Header Right Div -->
     <div class="btn-group" role="group" aria-label="...">
@@ -53,73 +53,6 @@
   </div>
   <!-- End Page Header -->
 
-  <!-- Start Form -->
-  <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog">
-      <!-- Modal content-->
-      <div class="panel panel-default">
-
-        <div class="panel-title">
-          Thêm tài khoản
-          <ul class="panel-tools">
-            <li><a class="icon minimise-tool"><i class="fa fa-minus"></i></a></li>
-            <li><a class="icon expand-tool"><i class="fa fa-expand"></i></a></li>
-            <li><a class="icon "><i class="fa fa-times" data-dismiss="modal"></i></a></li>
-          </ul>
-        </div>
-
-            <div class="panel-body">
-              <form class="form-horizontal">
-
-                <div class="form-group">
-                  <label class="col-sm-2 control-label form-label">Name</label>
-                  <div class="col-sm-10">
-                    <input type="text" class="form-control" id="input11">
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <label class="col-sm-2 control-label form-label">Surname</label>
-                  <div class="col-sm-10">
-                    <input type="text" class="form-control">
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <label class="col-sm-2 control-label form-label">Password</label>
-                  <div class="col-sm-10">
-                    <input type="password" class="form-control">
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <label class="col-sm-2 control-label form-label">Subject</label>
-                  <div class="col-sm-10">
-                    <input type="text" class="form-control" id="input122">
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <label class="col-sm-2 control-label form-label">Message</label>
-                  <div class="col-sm-10">
-                    <textarea class="form-control" rows="3"></textarea>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default">Submit</button>
-                  </div>
-                </div>
-
-              </form>
-
-            </div>
-
-      </div>
-      
-    </div>
-  </div>
-  <!-- End Form -->
 
  <!-- //////////////////////////////////////////////////////////////////////////// --> 
 <!-- START CONTAINER -->
