--- a/src/views/admin/create-user.ejs
+++ b/src/views/admin/create-user.ejs
@@ -9,16 +9,9 @@
   
     <!-- ========== Css Files ========== --> 
     <%- include('layouts/head') %>
-
-  <!-- ========== Css Files ========== -->
-  <link href="css/root.css" rel="stylesheet">
-  <%- include('layouts/head') %>
-
+    
   </head>
   <body>
-  <!-- Start Page Loading -->
-  <%- include('layouts/loading') %>
-  <!-- End Page Loading -->
  <!-- //////////////////////////////////////////////////////////////////////////// --> 
   <!-- START HEADER -->
   <%- include('layouts/header') %>
@@ -38,92 +31,13 @@
 
   <!-- Start Page Header -->
   <div class="page-header">
-    <h1 class="title">Quản lý thể loại sách</h1>
-    
-    <!-- Start Page Header Right Div -->
+    <h1 class="title">Thêm tài khoản</h1>
+  
     <div class="right">
-      <a href="/admin/create-book-category" type="button" class="btn btn-success btn-lg" >Thêm</a>
-    </div>
-    <!-- End Page Header Right Div -->
-    <div class="btn-group" role="group" aria-label="...">
-      Filter by :
-      <select class="form-select form-select-lg admin-feature__select" aria-label="Default select example">
-        <option value="all">Tất cả</option>
-        <option value="saab">Tiểu thuyết</option>
-        <option value="opel">Truyện ngắn</option>
-        <option value="audi">Học tập</option>
-      </select>
-    </div>
+        <a href="/admin/user"><button class="btn btn-info btn-lg" >Quay lại</button></a>
+      </div>
   </div>
   <!-- End Page Header -->
-
-  <!-- Start Form -->
-  <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog">
-      <!-- Modal content-->
-      <div class="panel panel-default">
-
-        <div class="panel-title">
-          Thêm thể loại
-          <ul class="panel-tools">
-            <li><a class="icon minimise-tool"><i class="fa fa-minus"></i></a></li>
-            <li><a class="icon expand-tool"><i class="fa fa-expand"></i></a></li>
-            <li><a class="icon "><i class="fa fa-times" data-dismiss="modal"></i></a></li>
-          </ul>
-        </div>
-
-            <div class="panel-body">
-              <form class="form-horizontal">
-
-                <div class="form-group">
-                  <label class="col-sm-2 control-label form-label">Name</label>
-                  <div class="col-sm-10">
-                    <input type="text" class="form-control" id="input11">
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <label class="col-sm-2 control-label form-label">Surname</label>
-                  <div class="col-sm-10">
-                    <input type="text" class="form-control">
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <label class="col-sm-2 control-label form-label">Password</label>
-                  <div class="col-sm-10">
-                    <input type="password" class="form-control">
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <label class="col-sm-2 control-label form-label">Subject</label>
-                  <div class="col-sm-10">
-                    <input type="text" class="form-control" id="input122">
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <label class="col-sm-2 control-label form-label">Message</label>
-                  <div class="col-sm-10">
-                    <textarea class="form-control" rows="3"></textarea>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default">Submit</button>
-                  </div>
-                </div>
-
-              </form>
-
-            </div>
-
-      </div>
-      
-    </div>
-  </div>
-  <!-- End Form -->
 
  <!-- //////////////////////////////////////////////////////////////////////////// --> 
 <!-- START CONTAINER -->
@@ -131,41 +45,43 @@
   <!-- Start Row -->
   <div class="row">
     <!-- Start Panel -->
-    <div class="col-md-12">
+    <div class="col-lg-12">
         <div class="panel panel-default">
-          <table class="table table-hover">
-            <thead>
-              <tr>
-                <!-- <td class="text-center"><i class="fa fa-trash"></i></td> -->
-                <td>ID</td>
-                <td>Name</td>
-                <td>Display name</td>
-                <td>Action</td>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>Tiểu thuyết</td>
-                <td>Discription</td>
-                <td>
-                  <i class="fas fa-edit admin-table__icon-edit"></i>
-                  <i class="fas fa-trash-alt admin-table__icon-delete"></i>
-                </td>
-              </tr>     
-              <tr>
-                <td>2</td>
-                <td>Truyện ngắn</td>
-                <td>Truyện ngắn</td>
-                <td>
-                  <i class="fas fa-edit admin-table__icon-edit"></i>
-                  <i class="fas fa-trash-alt admin-table__icon-delete"></i>
-                </td>
-              </tr>     
-            </tbody>
-          </table>
+            <div class="panel-body">
+            <form class="form-horizontal" action="/admin/create-user" method="POST">
+
+                <div class="form-group">
+                <label class="col-sm-2 control-label form-label" for="username">Username</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="username" name="username">
+                </div>
+                </div>
+
+                <div class="form-group">
+                <label class="col-sm-2 control-label form-label" for="displayName">Display Name</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="displayName" name="displayName">
+                </div>
+                </div>
+
+                <div class="form-group">
+                <label class="col-sm-2 control-label form-label" for="password">Password</label>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" id="password" name="password">
+                </div>
+                </div>
+                
+                <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">Create</button>
+                </div>
+                </div>
+
+            </form>
+
+            </div>
         </div>
-    </div>
+      </div>
     <!-- End Panel -->
   </div>
   <!-- End Row -->
